--- a/casinos.html
+++ b/casinos.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary SEO Meta -->
     <title>Best Crypto Casinos 2025: bc.game, BitStarz, Xyes - No KYC, Instant Withdrawals</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💎</text></svg>">
     <meta name="description" content="Discover the top crypto casinos in 2025: bc.game (live dealers), BitStarz (5000+ games), and Xyes (NFT rewards). All offer no-KYC deposits, instant payouts, and huge bonuses.">
     <meta name="keywords" content="best crypto casinos 2025, bc.game casino, bitstarz alternative, xyes casino, no kyc crypto casino, instant withdrawal casino, bitcoin gambling, crypto slots, provably fair, crypto betting">
     <meta name="author" content="CryptoHama">
