--- a/exchanges.html
+++ b/exchanges.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary SEO Meta -->
     <title>Best Crypto Exchanges 2025: Pionex, Binance, Bybit - Low Fees, No KYC Options</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💎</text></svg>">
     <meta name="description" content="Discover the top crypto exchanges in 2025: Pionex (zero fees), Binance (largest liquidity), and Bybit (derivatives leader). Low fees, high liquidity, spot trading without KYC, and P2P support.">
     <meta name="keywords" content="best crypto exchanges 2025, pionex exchange, binance alternative, bybit exchange, no kyc crypto exchange, zero fee exchange, p2p trading, buy crypto without id, fast crypto exchange, decentralized exchange">
     <meta name="author" content="CryptoHama">
