--- a/faucets.html
+++ b/faucets.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary SEO Meta -->
     <title>Best Crypto Faucets 2025 - Earn Free BTC, ETH, SOL, TON Instantly</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💎</text></svg>">
     <meta name="description" content="Verified list of the highest-paying crypto faucets in 2025. Earn free Bitcoin, Ethereum, Solana, TON, DOGE with no KYC. Instant payouts via FaucetPay. Includes Bashtronx passive earnings. Now featuring earnbitmoon.club: $0.0005+ every 5 mins, min withdrawal $0.2 to FaucetPay or Payeer.">
     <meta name="keywords" content="best crypto faucets 2025, free bitcoin faucet, direct faucet, passive crypto earnings, bashtronx, coinpayz, viefaucet, coinymate, autofaucet, faucetcrypto, claimcrypto, chillfaucet, hotfaucet, satoshifaucet, bitfaucet, earn crypto free, no kyc faucet, earnbitmoon, earnbitmoon.club, earnbitmoon club">
     <meta name="author" content="CryptoHama">
