--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Primary SEO Meta -->
     <title>CryptoHama - Ultimate Crypto Resource Hub: Exchanges, Casinos & Faucets</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>💎</text></svg>">
     <meta name="description" content="CryptoHama: Your trusted guide to verified crypto exchanges, safe casinos, and high-paying faucets. Earn free BTC, ETH, SOL, TON, DOGE. No KYC. Instant payouts.">
     <meta name="keywords" content="crypto exchanges 2025, best bitcoin casino, free crypto faucet, earn crypto free, no kyc crypto, bitcoin faucet, ethereum faucet, solana faucet, toncoin faucet, dogecoin faucet, crypto guides">
     <meta name="author" content="CryptoHama">
