--- a/faucets.html
+++ b/faucets.html
@@ -11,6 +11,17 @@
     <meta name="author" content="CryptoHama">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cryptohama.com/faucets.html">
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P63D5L004K');
+</script>
+
     <!-- Open Graph / Social Media -->
     <meta property="og:title" content="Best Crypto Faucets 2025 + Direct & Passive Earning Sites">
     <meta property="og:description" content="Earn free Bitcoin, Ethereum, Dogecoin, Litecoin, TON, Solana and more with verified faucets. No signup required. Instant withdrawals. Passive income with Bashtronx network. Now including earnbitmoon.club: $0.0005 every 5 mins, $0.2 minimum withdrawal to FaucetPay or Payeer.">
