--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <meta name="author" content="CryptoHama">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://cryptohama.com/">
+    
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P63D5L004K');
+</script>
+
     <!-- Open Graph / Social Media -->
     <meta property="og:title" content="CryptoHama - Best Crypto Exchanges, Casinos & Faucets 2025">
     <meta property="og:description" content="Discover the top verified crypto exchanges, provably fair casinos, and highest-paying faucets to earn free Bitcoin, Ethereum, Solana, TON, Dogecoin and more. No KYC. Instant withdrawals.">
