--- a/casinos.html
+++ b/casinos.html
@@ -35,6 +35,18 @@
     <link rel="icon" href="image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>₿</text></svg>">
     <link rel="stylesheet" href="styles.css">
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-P63D5L004K');
+</script>
+
+
     <!-- Structured Data — JSON-LD Schema.org -->
     <script type="application/ld+json">
     {
