--- a/casinos.html
+++ b/casinos.html
@@ -32,20 +32,17 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>₿</text></svg>">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>₿</text></svg>">
     <link rel="stylesheet" href="styles.css">
 
-
-<!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-P63D5L004K');
-</script>
-
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-P63D5L004K');
+    </script>
 
     <!-- Structured Data — JSON-LD Schema.org -->
     <script type="application/ld+json">
@@ -155,32 +152,31 @@
                 <h2 id="top10-heading" class="section-title">Top Verified Crypto Casinos</h2>
                 <div class="faucets-grid">
 
-                    <!-- bc.game -->
-                    <div class="faucet-card">
-                        <div class="faucet-header">
-                            <div class="faucet-logo">
-                                <img src="https://scontent.fbir7-1.fna.fbcdn.net/v/t39.30808-1/495802420_716037200944830_1219807960908620704_n.jpg" alt="bc.game Logo - Live Casino & Sports Betting" loading="lazy" width="60" height="60">
-                            </div>
-                            <div class="faucet-info">
-                                <h3>bc.game</h3>
-                                <div class="faucet-rating">
-                                    <span class="stars" aria-label="4.9 out of 5 stars">★★★★★</span>
-                                    <span class="rating-score">4.9/5</span>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="faucet-details">
-                            <p><strong>Currencies:</strong> BTC, ETH, LTC, DOGE, SOL, USDT, and 15+ others</p>
-                            <p><strong>Bonus:</strong> <strong>200% deposit match up to 5 BTC</strong> + 100 free spins</p>
-                            <p><strong>Games:</strong> 3000+ slots, live dealer (roulette, blackjack, poker), sports betting, crash, dice, plinko</p>
-                            <p><strong>KYC:</strong> <strong>No KYC required</strong> for deposits or play. Withdrawals >$10K require ID verification.</p>
-                            <p><strong>Withdrawal Speed:</strong> Instant (under 1 minute)</p>
-                            <p><strong>Speciality:</strong> World’s #1 provably fair casino. Unique “Daily Cashback” and “Game of the Day” tournaments. Trusted by over 10M users.</p>
-                        </div>
-                        <div class="faucet-actions">
-                            <a href="https://bc.game/i-66d8fbj-n/" target="_blank" rel="noopener noreferrer" class="btn btn-primary">Claim Bonus</a>
-                        </div>
-                    </div>
+<!-- bc.game -->
+<div class="faucet-card">
+    <div class="faucet-header">
+        <div class="faucet-logo">
+            <img src="https://bc.game/substation/bc/favicon/favicon-32x32.png" alt="bc.game Logo - Live Casino & Sports Betting" loading="lazy" width="60" height="60">
+        </div>
+        <div class="faucet-info">
+            <h3>bc.game</h3>
+            <div class="faucet-rating">
+                <span class="stars" aria-label="4.9 out of 5 stars">★★★★★</span>
+                <span class="rating-score">4.9/5</span>
+            </div>
+        </div>
+    </div>
+    <div class="faucet-details">
+        <p><strong>Currencies:</strong> BTC, ETH, LTC, DOGE, SOL, USDT, and 15+ others</p>
+        <p><strong>Bonus:</strong> <strong>200% deposit match up to 5 BTC</strong> + 100 free spins</p>
+        <p><strong>Games:</strong> 3000+ slots, live dealer (roulette, blackjack, poker), sports betting, crash, dice, plinko</p>
+        <p><strong>KYC:</strong> <strong>No KYC required</strong> for deposits or play. Withdrawals >$10K require ID verification.</p>
+        <p><strong>Withdrawal Speed:</strong> Instant (under 1 minute)</p>
+        <p><strong>Speciality:</strong> World’s #1 provably fair casino. Unique “Daily Cashback” and “Game of the Day” tournaments. Trusted by over 10M users.</p>
+    </div>
+    <div class="faucet-actions">
+<a href="#" data-target="https://bc.game/i-66d8fbj-n/" target="_blank" rel="noopener noreferrer" class="btn btn-primary js-redirect">Join Now</a>    </div>
+</div>
 
                     <!-- BitStarz (via 1wfhjt.life) -->
                     <div class="faucet-card">
@@ -328,5 +324,19 @@
 
     <button id="scrollToTop" aria-label="Scroll to top">↑</button>
     <script src="script.js"></script>
+    <script>
+document.addEventListener('DOMContentLoaded', function() {
+    // Find all links with class 'js-redirect'
+    document.querySelectorAll('.js-redirect').forEach(function(link) {
+        link.addEventListener('click', function(e) {
+            e.preventDefault(); // Prevent default # behavior
+            const targetUrl = this.getAttribute('data-target');
+            if (targetUrl) {
+                window.open(targetUrl, '_blank'); // Open in new tab
+            }
+        });
+    });
+});
+</script>
 </body>
 </html>
