--- a/faucets.html
+++ b/faucets.html
@@ -451,6 +451,37 @@
             </nav>
         </div>
     </header>
+    <div class="promo-bar">
+    <p>
+        🎉 3 Satoshi bonus daily! No Minimum and Instant withdrawal to Faucetpay. 
+        <a href="https://earnfreebtc.click/index.php?ref=203047">Join Now →</a>
+    </p>
+</div>
+
+<style>
+.promo-bar {
+    background: linear-gradient(90deg, #ff7eb3, #ff758c, #ff9770, #ffb347);
+    color: #fff;
+    text-align: center;
+    padding: 8px 15px;
+    font-size: 0.95rem;
+    font-weight: 500;
+}
+.promo-bar p {
+    margin: 0;
+}
+.promo-bar a {
+    color: #fff;
+    font-weight: 700;
+    text-decoration: underline;
+    margin-left: 8px;
+    transition: color 0.3s ease;
+}
+.promo-bar a:hover {
+    color: #000; /* contrast hover */
+}
+</style>
+
     <main>
         <!-- Hero Section -->
         <section class="page-header" aria-label="Hero section for crypto faucets">
