--- a/faucets.html
+++ b/faucets.html
@@ -451,10 +451,10 @@
             </nav>
         </div>
     </header>
-    <div class="promo-bar">
+<div class="promo-bar">
     <p>
         🎉 3 Satoshi bonus daily! No Minimum and Instant withdrawal to Faucetpay. 
-        <a href="https://earnfreebtc.click/index.php?ref=203047">Join Now →</a>
+        <a href="https://earnfreebtc.click/index.php?ref=203047" target="_blank" rel="noopener noreferrer">Join Now →</a>
     </p>
 </div>
 
@@ -463,24 +463,33 @@
     background: linear-gradient(90deg, #ff7eb3, #ff758c, #ff9770, #ffb347);
     color: #fff;
     text-align: center;
-    padding: 8px 15px;
+    padding: 10px 15px;
     font-size: 0.95rem;
     font-weight: 500;
 }
+
 .promo-bar p {
     margin: 0;
 }
+
 .promo-bar a {
-    color: #fff;
+    display: inline-block;
+    background: #fff;
+    color: #ff5a7a;
     font-weight: 700;
-    text-decoration: underline;
-    margin-left: 8px;
-    transition: color 0.3s ease;
+    text-decoration: none;
+    margin-left: 12px;
+    padding: 5px 12px;
+    border-radius: 6px;
+    transition: all 0.3s ease;
 }
+
 .promo-bar a:hover {
-    color: #000; /* contrast hover */
+    background: #000;
+    color: #fff;
 }
 </style>
+
 
     <main>
         <!-- Hero Section -->
