--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
                 </div>
             </div>
         </section>
+        <div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
+          <iframe data-aa='2410442' src='//acceptable.a-ads.com/2410442/?size=Adaptive'
+                            style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
+        </div>
     </main>
 
     <footer class="footer" role="contentinfo">
