--- a/faucets.html
+++ b/faucets.html
@@ -715,7 +715,7 @@
                     <div class="faucet-card" itemscope itemtype="https://schema.org/Service" id="spaceshooter">
                         <div class="faucet-header" itemprop="name">
                             <div class="faucet-logo">
-                                <img src="images/xicon.ico" alt="SpaceShooter - Earn $0.0005+ every 4 mins" loading="lazy" width="60" height="60" itemprop="image">
+                                <img src="images/xicon.png" alt="SpaceShooter - Earn $0.0005+ every 4 mins" loading="lazy" width="60" height="60" itemprop="image">
                             </div>
                             <div class="faucet-info">
                                 <h3 itemprop="name">SpaceShooter</h3>
