--- a/faucets.html
+++ b/faucets.html
@@ -677,7 +677,7 @@
     </header>
 <div class="promo-bar">
     <p>
-        🎉 3 Satoshi bonus daily! No Minimum and Instant withdrawal to Faucetpay. 
+        🎉 New PTC. No Minimum and Instant withdrawal to Faucetpay. 
         <a href="https://earnfreebtc.click/index.php?ref=203047" target="_blank" rel="noopener noreferrer">Join Now →</a>
     </p>
 </div>
