--- a/exchanges.html
+++ b/exchanges.html
@@ -128,14 +128,15 @@
         <div class="container">
             <nav class="navbar" role="navigation" aria-label="Main navigation">
                 <div class="nav-brand">
-                    <h1><a href="index.html" aria-label="Go to CryptoHama homepage">CryptoHama</a></h1>
+                    <h1><a href="/" aria-label="Go to CryptoHama homepage">CryptoHama</a></h1>
                 </div>
                 <div class="nav-menu" id="nav-menu">
                     <ul class="nav-list" role="menubar">
-                        <li><a href="index.html" class="nav-link" role="menuitem">Home</a></li>
-                        <li><a href="casinos.html" class="nav-link" role="menuitem">Casinos</a></li>
-                        <li><a href="exchanges.html" class="nav-link active" role="menuitem" aria-current="page">Exchanges</a></li>
-                        <li><a href="faucets.html" class="nav-link" role="menuitem">Faucets</a></li>
+                        <li><a href="/" class="nav-link">Home</a></li>
+                        <li><a href="casinos.html" class="nav-link">Casinos</a></li>
+                        <li><a href="exchanges.html" class="nav-link active" aria-current="page">Exchanges</a></li>
+                        <li><a href="faucets.html" class="nav-link">Faucets</a></li>
+                        <li><a href="about.html" class="nav-link">About Us</a></li>
                     </ul>
                 </div>
                 <div class="nav-toggle" id="nav-toggle" aria-label="Toggle navigation menu">
@@ -321,7 +322,7 @@
                         </ul>
                         <ul>
                             <li><a href="faucets.html" aria-label="View best crypto faucets">Faucets</a></li>
-                            <li><a href="https://faucetpay.io/?r=cryptohama" aria-label="Join FaucetPay" rel="noopener noreferrer">FaucetPay</a></li>
+                            <li><a href="about.html" aria-label="Learn about CryptoHama">About Us</a></li>
                         </ul>
                     </div>
                 </div>
@@ -333,6 +334,6 @@
     </footer>
 
     <button id="scrollToTop" aria-label="Scroll to top">↑</button>
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
 </body>
 </html>
