--- a/faucets.html
+++ b/faucets.html
@@ -19,6 +19,16 @@
   <meta name="twitter:description" content="Claim free Bitcoin, Litecoin, Pepe & other crypto in 2025. Updated list of trusted faucets.">
   <meta name="twitter:image" content="https://cryptohama.com/images/og-faucets.jpg">
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>">
+  
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-P63D5L004K');
+  </script>
+
   <style>
     * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
