--- a/faucets.html
+++ b/faucets.html
@@ -18,7 +18,7 @@
   <meta name="twitter:title" content="CryptoHama - Best Crypto Faucets 2025 — Earn Bitcoin, Litecoin, Pepe, etc.">
   <meta name="twitter:description" content="Claim free Bitcoin, Litecoin, Pepe & other crypto in 2025. Updated list of trusted faucets.">
   <meta name="twitter:image" content="https://cryptohama.com/images/og-faucets.jpg">
-  <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>">
+  <link rel="icon" href="image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>">
   
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
@@ -231,7 +231,7 @@
               <div class="card-title">Freeltc</div>
             </div>
             <div class="features">
-              <span>✓ $0.0005+ every 5 mins</span>
+              <span>✓ $0.00065+ every 4mins</span>
               <span>✓ Highest Paying Easy</span>
             </div>
             <a href="https://freeltc.online/?r=11400" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
@@ -955,6 +955,11 @@
           <strong>What are VieFaucet and EarnBitMoon.club?</strong>
           <p>VieFaucet is a reliable hourly Bitcoin faucet with instant FaucetPay withdrawals and a clean, ad-supported interface. EarnBitMoon.club supports multiple cryptocurrencies (BTC, LTC, DOGE, DASH) and features frequent bonus games, referral commissions, and low payout thresholds—making both excellent choices for regular earners.</p>
         </div>
+      </div>
+
+      <div id="frame" style="width: 100%; margin: auto; position: relative; z-index: 99998;">
+        <iframe data-aa='2414637' src='//acceptable.a-ads.com/2414637/?size=Adaptive'
+                style='border:0; padding:0; width:70%; height:auto; overflow:hidden; display: block; margin: auto'></iframe>
       </div>
     </main>
     <footer>
