--- a/faucets.html
+++ b/faucets.html
@@ -238,14 +238,14 @@
           </div>
           <div class="faucet-card">
             <div class="card-header">
-              <img src="https://cryptohama.com/images/mix.png" class="card-logo" alt="MixFaucet logo" onerror="this.style.display='none'">
-              <div class="card-title">MixFaucet</div>
+              <img src="https://cryptohama.com/images/ukr.png" class="card-logo" alt="Ukranian Faucet logo" onerror="this.style.display='none'">
+              <div class="card-title">Ukranian Faucet</div>
             </div>
             <div class="features">
-              <span>✓ $0.0006+ every 5 mins</span>
-              <span>✓ Just Like VieFaucet</span>
+              <span>✓ $0.00075+ every 4 mins</span>
+              <span>✓ New site</span>
             </div>
-            <a href="https://mixfaucet.com/?r=1109" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
+            <a href="https://cryptoukr.in.ua/?r=8517" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
           </div>
           <div class="faucet-card">
             <div class="card-header">
