--- a/faucets.html
+++ b/faucets.html
@@ -243,7 +243,7 @@
             </div>
             <div class="features">
               <span>✓ $0.00075+ every 4 mins</span>
-              <span>✓ New site</span>
+              <span>✓ Min $0.05 instant to FaucetPay</span>
             </div>
             <a href="https://cryptoukr.in.ua/?r=8517" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
           </div>
@@ -429,17 +429,6 @@
         <h2 class="section-title">Hourly</h2>
         <div class="faucet-grid">
 
-          <div class="faucet-card">
-            <div class="card-header">
-              <img src="https://cryptohama.com/images/btc.png" class="card-logo" alt="Freebitco.in logo" onerror="this.style.display='none'">
-              <div class="card-title">Freebitco.in</div>
-            </div>
-            <div class="features">
-              <span>✓ 2+ satoshi</span>
-              <span>✓ Interest on Wallet</span>
-            </div>
-            <a href="https://freebitco.in/?r=5188579" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
-          </div>
           <div class="faucet-card">
             <div class="card-header">
               <img src="https://cryptohama.com/images/easylite.png" class="card-logo" alt="EasyLite logo" onerror="this.style.display='none'">
@@ -782,7 +771,7 @@
               <div class="card-title">Monster Faucet</div>
             </div>
             <div class="features">
-              <span>✓ Earn points</span>
+              <span>✓ Kill monsters</span>
               <span>✓ Faucet, PTC, Shortlinks</span>
             </div>
             <a href="https://monsterfaucet.com/?ref=1614" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
@@ -797,6 +786,17 @@
               <span>✓ Time based</span>
             </div>
             <a href="https://simplebits.io/ref/n9Z908pvlxST" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
+          </div>
+          <div class="faucet-card">
+            <div class="card-header">
+              <img src="https://cryptohama.com/images/cool.png" class="card-logo" alt="Coolfaucet logo" onerror="this.style.display='none'">
+              <div class="card-title">Coolfaucet</div>
+            </div>
+            <div class="features">
+              <span>✓ Kill monsters</span>
+              <span>✓ Faucet, PTC, Shortlinks</span>
+            </div>
+            <a href="http://coolfaucet.hu/?ref=4141" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
           </div>
         </div>
       </section>
