--- a/faucets.html
+++ b/faucets.html
@@ -238,22 +238,11 @@
           </div>
           <div class="faucet-card">
             <div class="card-header">
-              <img src="https://cryptohama.com/images/ukr.png" class="card-logo" alt="Ukranian Faucet logo" onerror="this.style.display='none'">
-              <div class="card-title">Ukranian Faucet</div>
-            </div>
-            <div class="features">
-              <span>✓ $0.00075+ every 4 mins</span>
-              <span>✓ Min $0.05 instant to FaucetPay</span>
-            </div>
-            <a href="https://cryptoukr.in.ua/?r=8517" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
-          </div>
-          <div class="faucet-card">
-            <div class="card-header">
               <img src="https://cryptohama.com/images/fey.ico" class="card-logo" alt="Feyorra.top logo" onerror="this.style.display='none'">
               <div class="card-title">Feyorra.top</div>
             </div>
             <div class="features">
-              <span>✓ $0.0002+ every 10 secs</span>
+              <span>✓ $0.0004+ every 4 mins</span>
               <span>✓ Easy Captcha, Quick</span>
             </div>
             <a href="https://feyorra.top/?r=180567" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
@@ -334,6 +323,17 @@
               <span>✓ Manual Payment</span>
             </div>
             <a href="https://acryptominer.io?ref=saroj433@gmail.com" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
+          </div>
+          <div class="faucet-card">
+            <div class="card-header">
+              
+              <div class="card-title">Spaceshooter</div>
+            </div>
+            <div class="features">
+              <span>✓ $0.00045+ every 5 min</span>
+              <span>✓ Multiple coins, Instant Payment</span>
+            </div>
+            <a href="https://spaceshooter.net/?r=28035" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
           </div>
           <div class="faucet-card">
             <div class="card-header">
