--- a/faucets.html
+++ b/faucets.html
@@ -238,6 +238,28 @@
           </div>
           <div class="faucet-card">
             <div class="card-header">
+              <img src="https://cryptohama.com/images/mix.png" class="card-logo" alt="MixFaucet logo" onerror="this.style.display='none'">
+              <div class="card-title">MixFaucet</div>
+            </div>
+            <div class="features">
+              <span>✓ $0.0006+ every 5 mins</span>
+              <span>✓ Just Like VieFaucet</span>
+            </div>
+            <a href="https://mixfaucet.com/?r=1109" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
+          </div>
+          <div class="faucet-card">
+            <div class="card-header">
+              <img src="https://cryptohama.com/images/ukr.png" class="card-logo" alt="Ukranian Faucet logo" onerror="this.style.display='none'">
+              <div class="card-title">Ukranian Faucet</div>
+            </div>
+            <div class="features">
+              <span>✓ $0.00075+ every 15 mins</span>
+              <span>✓ Min $0.05 instant to FaucetPay</span>
+            </div>
+            <a href="https://cryptoukr.in.ua/?r=8517" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
+          </div>
+          <div class="faucet-card">
+            <div class="card-header">
               <img src="https://cryptohama.com/images/fey.ico" class="card-logo" alt="Feyorra.top logo" onerror="this.style.display='none'">
               <div class="card-title">Feyorra.top</div>
             </div>
@@ -389,17 +411,6 @@
               <span>✓ Bitcon to FaucetPay</span>
             </div>
             <a href="https://coinadster.com/?ref=317987" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
-          </div>
-          <div class="faucet-card">
-            <div class="card-header">
-              <img src="https://cryptohama.com/images/claimcoin.png" class="card-logo" alt="Claimcoin logo" onerror="this.style.display='none'">
-              <div class="card-title">Claimcoin</div>
-            </div>
-            <div class="features">
-              <span>✓ $0.00015+ every 10 sec</span>
-              <span>✓ Easy Captcha</span>
-            </div>
-            <a href="https://claimcoin.in/?r=173522" target="_blank" rel="noopener" class="visit-btn">Visit Site</a>
           </div>
           <div class="faucet-card">
             <div class="card-header">
