--- a/admin/index.html
+++ b/admin/index.html
@@ -1,11 +1,15 @@
 <!doctype html>
 <html>
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>V 0.4 CryptoHama Admin</title>
-</head>
-<body>
-  <script src="https://unpkg.com/decap-cms@^3.0.0"></script>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Site Admin</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+  </head>
+  <body>
+    <script src="https://cdn.jsdelivr.net/npm/netlify-cms-app@^2.0.0/dist/netlify-cms-app.js"></script>
+    <script>
+      // default init will look for /admin/config.yml
+      window.CMS && window.CMS.init();
+    </script>
+  </body>
 </html>
