--- a/admin/index.html
+++ b/admin/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <title>Site Admin</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-  </head>
-  <body>
-    <script src="https://cdn.jsdelivr.net/npm/netlify-cms-app@^2.0.0/dist/netlify-cms-app.js"></script>
-    <script>
-      // default init will look for /admin/config.yml
-      window.CMS && window.CMS.init();
-    </script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Admin – My Site</title>
+  <meta name="robots" content="noindex" />
+</head>
+<body>
+  <script src="https://unpkg.com/@sveltia/cms/dist/sveltia-cms.js"></script>
+  <script>
+    // Initialize the CMS; default config location is /admin/config.yml
+    window.CMS && window.CMS.init();
+  </script>
+</body>
 </html>
