--- a/faucets.html
+++ b/faucets.html
@@ -18,8 +18,7 @@
     <meta name="twitter:title" content="Best Crypto Faucets 2025 – Free Crypto No Investment">
     <meta name="twitter:description" content="Top-rated faucets: VieFaucet, EarnBitMoon, AdBTC. Low min. withdrawal. Fast payouts. Bookmark now!">
     <link rel="canonical" href="https://cryptohama.com/faucets.html">
-    <link rel="icon" href="image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚀</text></svg>">
-    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins:wght@700;800&display=swap" rel="stylesheet">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90' text-anchor='middle' x='50'>🚀</text></svg>">    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&family=Poppins:wght@700;800&display=swap" rel="stylesheet">
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
         body {
@@ -421,13 +420,22 @@
             color: rgba(0, 0, 0, 0.55);
         }
     </style>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P63D5L004K"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-P63D5L004K');
+    </script>
 </head>
 <body>
-    <div class="top-cta">
-        <a href="https://litecoinfarm.online/index.php?ref=267005">
-            <span>☠️ Don&#39;t Invest ☠️</span> Daily 3000 sats LTC instant withdrawal to Faucetpay
-        </a>
-    </div>
+<div class="top-cta">
+    <a href="https://litecoinfarm.online/index.php?ref=267005" target="_blank" rel="noopener">
+        <span>☠️ Don&#39;t Invest ☠️</span> Daily 3000 sats LTC instant withdrawal to Faucetpay
+    </a>
+</div>
 
     <header class="header">
         <a href="/" class="logo-link" aria-label="Go to homepage">
@@ -443,7 +451,7 @@
 
     <div class="main-wrapper">
         <div class="half-ctas">
-            <a href="https://faucetpay.io/?r=cryptohama" class="half-cta">
+            <a href="https://faucetpay.io/?r=cryptohama" class="half-cta" target="_blank" rel="noopener">
                 <span>✅</span> Join FaucetPay
             </a>
         </div>
@@ -1419,6 +1427,13 @@
 <div class="final-note">
     <p><strong>Final Advice:</strong> Treat faucets as a daily habit, not a get-rich-quick scheme. Visit this bookmarked page every day, claim consistently, allow ads on trusted sites, and watch your crypto balance grow steadily over time.</p>
 </div>
+    </div>
+
+
+    <!-- A-ADS Banner (just above footer) -->
+    <div id="frame" style="width: 100%;margin: auto;position: relative; z-index: 99998;">
+        <iframe data-aa='2414637' src='//acceptable.a-ads.com/2414637/?size=Adaptive'
+                style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
     </div>
 
     <footer class="footer">
