--- a/faucets.html
+++ b/faucets.html
@@ -504,14 +504,14 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/ukr.png" alt="Ukranian Faucet" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Ukranian Faucet</div>
+                    <img src="https://cryptohama.com/images/fly.jpeg" alt="Fly Crypto" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Fly Crypto</div>
                 </div>
                 <ul class="card-bullets">
-                    <li>$0.00075+ every 10 mins</li>
-                    <li>Min $0.03 to FaucetPay</li>
+                    <li>$0.0005+ every 5 Minutes</li>
+                    <li>No minimun FaucetPay</li>
                 </ul>
-                <a href="https://cryptoukr.in.ua/?r=8517" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://fly-crypto.com/?r=243" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -570,14 +570,14 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/fly.jpeg" alt="Fly Crypto" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Fly Crypto</div>
+                    <img src="https://cryptohama.com/images/ukr.png" alt="Ukranian Faucet" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Ukranian Faucet</div>
                 </div>
                 <ul class="card-bullets">
-                    <li>$0.0005+ every 5 Minutes</li>
-                    <li>No minimun FaucetPay</li>
+                    <li>$0.00075+ every 10 mins</li>
+                    <li>Min $0.03 to FaucetPay</li>
                 </ul>
-                <a href="https://fly-crypto.com/?r=243" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+                <a href="https://cryptoukr.in.ua/?r=8517" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
             <div class="card">
                 <div class="card-header">
@@ -682,6 +682,28 @@
 
         <h2 class="section-title">Premium Faucets</h2>
         <div class="cards">
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/hun.ico" alt="Hungeroffers" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Hungeroffers</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>Multiple ways to Earn</li>
+                    <li>High Paying Offers</li>
+                </ul>
+                <a href="https://www.hungeroffer.com/ref/7656B2" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/freecash.png" alt="Freecash" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Freecash</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>Multiple ways to Earn</li>
+                    <li>High Paying Offers</li>
+                </ul>
+                <a href="https://freecash.com/r/Q3NAT" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
             <div class="card">
                 <div class="card-header">
                     <img src="https://cryptohama.com/images/ff.png" alt="Fire Faucet" style="width:42px;height:42px;border-radius:50%;">
