--- a/faucets.html
+++ b/faucets.html
@@ -608,7 +608,7 @@
                 </div>
                 <ul class="card-bullets">
                     <li>$0.00045+ every 5 min</li>
-                    <li>Multiple coins, Instant Payment</li>
+                    <li>Instant Payment</li>
                 </ul>
                 <a href="https://spaceshooter.net/?r=28035" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
             </div>
