--- a/faucets.html
+++ b/faucets.html
@@ -433,7 +433,7 @@
 <body>
 <div class="top-cta">
     <a href="https://litecoinfarm.online/index.php?ref=267005" target="_blank" rel="noopener">
-        <span>☠️ Don&#39;t Invest ☠️</span> Daily 3000 sats LTC instant withdrawal to Faucetpay
+        <span>Withdraw Daily 3000 sats LTC instantly to Faucetpay</span> ☠️ Don&#39;t deposit as its a ponzi but withdraw till it works ☠️
     </a>
 </div>
 
