--- a/faucets.html
+++ b/faucets.html
@@ -684,17 +684,6 @@
         <div class="cards">
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/hun.ico" alt="Hungeroffers" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Hungeroffers</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>Multiple ways to Earn</li>
-                    <li>High Paying Offers</li>
-                </ul>
-                <a href="https://www.hungeroffer.com/ref/7656B2" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/freecash.png" alt="Freecash" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Freecash</div>
                 </div>
@@ -1099,7 +1088,7 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/cool.png" alt="Coolfaucet" style="width:42px;height:42px;border-radius:50%;">
+                    <img src="https://cryptohama.com/images/cool.jpg" alt="Coolfaucet" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Coolfaucet</div>
                 </div>
                 <ul class="card-bullets">
