--- a/faucets.html
+++ b/faucets.html
@@ -138,9 +138,9 @@
 
         /* Main Wrapper */
         .main-wrapper {
-            max-width: 90%;
-            margin: 0 5%;
-            padding: 0 2px;
+            max-width: 1600px;
+            margin: 0 auto;
+            padding: 0 5%;
         }
 
         /* CTAs */
@@ -526,6 +526,17 @@
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/bupdate.png" alt="Bitupdate" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Bitupdate</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.00055+ every 5 mins</li>
+                    <li>$0.03 Min to FaucetPay</li>
+                </ul>
+                <a href="https://bitupdate.info/?r=15908" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/fly.jpeg" alt="Fly Crypto" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Fly Crypto</div>
                 </div>
@@ -636,17 +647,6 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/aorg.png" alt="Autofaucet.org" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Autofaucet.org</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>20+ coins</li>
-                    <li>FaucetPay or Direct</li>
-                </ul>
-                <a href="https://autofaucet.org/r/tsaroz" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/coinadster.png" alt="Coinadster" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Coinadster</div>
                 </div>
@@ -682,6 +682,17 @@
 
         <h2 class="section-title">Premium Faucets</h2>
         <div class="cards">
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/aorg.png" alt="Autofaucet.org" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Autofaucet.org</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>20+ coins</li>
+                    <li>FaucetPay or Direct</li>
+                </ul>
+                <a href="https://autofaucet.org/r/tsaroz" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
             <div class="card">
                 <div class="card-header">
                     <img src="https://cryptohama.com/images/freecash.png" alt="Freecash" style="width:42px;height:42px;border-radius:50%;">
