--- a/faucets.html
+++ b/faucets.html
@@ -1288,6 +1288,8 @@
         <iframe data-aa='2414637' src='//acceptable.a-ads.com/2414637/?size=Adaptive'
                 style='border:0; padding:0; width:70%; height:auto; overflow:hidden;display: block;margin: auto'></iframe>
     </div>
+    
+    <iframe src="//ads-bitcoin.com/app/codes/banner?rcd=MTY5Mg==" scrolling="no" style="width:300px; height:250px; border:0px; padding:0;overflow:hidden" allowtransparency="true"></iframe>
 
     <footer class="footer">
         <p>© 2025 CryptoHama. Updated Daily. Bookmark now and earn free crypto daily.</p>
