--- a/faucets.html
+++ b/faucets.html
@@ -570,6 +570,17 @@
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/earnviv.ico" alt="Earnviv" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Earnviv</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>$0.001+ every 10 mins</li>
+                    <li>$1 Minimum Withdrawal</li>
+                </ul>
+                <a href="https://earnviv.com/?r=33847" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/tapcoin.svg" alt="Tapcoin-de" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Tapcoin-de</div>
                 </div>
@@ -625,17 +636,6 @@
             </div>
             <div class="card">
                 <div class="card-header">
-                    <img src="https://cryptohama.com/images/final.png" alt="Final Autoclaim" style="width:42px;height:42px;border-radius:50%;">
-                    <div class="card-name">Final Autoclaim</div>
-                </div>
-                <ul class="card-bullets">
-                    <li>80+ coins</li>
-                    <li>Multiple Ways to Earn</li>
-                </ul>
-                <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
-            </div>
-            <div class="card">
-                <div class="card-header">
                     <img src="https://cryptohama.com/images/fc.png" alt="FaucetCrypto" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">FaucetCrypto</div>
                 </div>
@@ -682,6 +682,17 @@
 
         <h2 class="section-title">Premium Faucets</h2>
         <div class="cards">
+            <div class="card">
+                <div class="card-header">
+                    <img src="https://cryptohama.com/images/final.png" alt="Final Autoclaim" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Final Autoclaim</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>80+ coins</li>
+                    <li>Multiple Ways to Earn</li>
+                </ul>
+                <a href="https://autofaucet.dutchycorp.space/?r=tsaroz" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
             <div class="card">
                 <div class="card-header">
                     <img src="https://cryptohama.com/images/aorg.png" alt="Autofaucet.org" style="width:42px;height:42px;border-radius:50%;">
