--- a/faucets.html
+++ b/faucets.html
@@ -695,6 +695,17 @@
             </div>
             <div class="card">
                 <div class="card-header">
+                    <img src="https://cryptohama.com/images/tapnoon.svg" alt="Tapnoon" style="width:42px;height:42px;border-radius:50%;">
+                    <div class="card-name">Tapnoon</div>
+                </div>
+                <ul class="card-bullets">
+                    <li>Offerwalls, Surveys</li>
+                    <li>Minimum $0.5</li>
+                </ul>
+                <a href="https://tapnoon.com/?referralCode=Y4idvu3xVtsaDF4k" class="visit-btn" target="_blank" rel="noopener noreferrer">Visit Site</a>
+            </div>
+            <div class="card">
+                <div class="card-header">
                     <img src="https://cryptohama.com/images/aorg.png" alt="Autofaucet.org" style="width:42px;height:42px;border-radius:50%;">
                     <div class="card-name">Autofaucet.org</div>
                 </div>
