--- a/faucets.html
+++ b/faucets.html
@@ -432,8 +432,8 @@
 </head>
 <body>
 <div class="top-cta">
-    <a href="https://litecoinfarm.online/index.php?ref=274927" target="_blank" rel="noopener">
-        <span>Withdraw Daily 3000 sats LTC instantly to Faucetpay</span> ☠️ Don&#39;t deposit as its a ponzi but withdraw till it works ☠️
+    <a href="#" target="_blank" rel="noopener">
+        <span>Use the site as a directory of working faucets</span> Bookmark Us!
     </a>
 </div>
 
